crates/variables/src/snapshots/variables__tests__class_static_variables.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 1,
        jtype: Class(
            "Logger",
        ),
        name: "logger",
        range: AstRange {
            start: AstPoint { 3:4 },
            end: AstPoint { 3:69 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
]
