crates/variables/src/snapshots/variables__tests__final_argument.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 2,
        jtype: Class(
            "String",
        ),
        name: "options",
        is_fun: true,
        range: AstRange {
            start: AstPoint { 3:4 },
            end: AstPoint { 7:5 },
        },
    },
    LocalVariable {
        level: 2,
        jtype: Class(
            "String",
        ),
        name: "outer",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 4:26 },
            end: AstPoint { 4:44 },
        },
    },
    LocalVariable {
        level: 3,
        jtype: Class(
            "String",
        ),
        name: "inner",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 5:6 },
            end: AstPoint { 5:22 },
        },
    },
]
