crates/variables/src/snapshots/variables__tests__get_catch_val_with_throws_method.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 2,
        jtype: Void,
        name: "ioStuff",
        range: AstRange {
            start: AstPoint { 3:4 },
            end: AstPoint { 8:5 },
        },
        flags: VarFlags(
            Function,
        ),
    },
    LocalVariable {
        level: 4,
        jtype: Class(
            "IOException",
        ),
        name: "eoeoeoeooe",
        range: AstRange {
            start: AstPoint { 5:17 },
            end: AstPoint { 5:39 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
]
