crates/variables/src/snapshots/variables__tests__get_loop_vars_base.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 2,
        jtype: Void,
        name: "hello",
        is_fun: true,
        range: AstRange {
            start: AstPoint { 3:4 },
            end: AstPoint { 14:5 },
        },
    },
    LocalVariable {
        level: 3,
        jtype: Generic(
            "List",
            [
                Class(
                    "String",
                ),
            ],
        ),
        name: "names",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 4:8 },
            end: AstPoint { 4:46 },
        },
    },
    LocalVariable {
        level: 4,
        jtype: Int,
        name: "i",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 5:13 },
            end: AstPoint { 5:23 },
        },
    },
    LocalVariable {
        level: 6,
        jtype: Class(
            "String",
        ),
        name: "name",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 6:15 },
            end: AstPoint { 6:26 },
        },
    },
    LocalVariable {
        level: 7,
        jtype: Var,
        name: "n",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 7:32 },
            end: AstPoint { 7:33 },
        },
    },
    LocalVariable {
        level: 7,
        jtype: Var,
        name: "m",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 7:35 },
            end: AstPoint { 7:36 },
        },
    },
    LocalVariable {
        level: 8,
        jtype: Var,
        name: "c",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 8:48 },
            end: AstPoint { 8:49 },
        },
    },
]
