crates/variables/src/snapshots/variables__tests__get_try_vars_base.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 2,
        jtype: Void,
        name: "hello",
        is_fun: true,
        range: AstRange {
            start: AstPoint { 3:4 },
            end: AstPoint { 31:5 },
        },
    },
    LocalVariable {
        level: 5,
        jtype: Class(
            "String",
        ),
        name: "ty1",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 8:12 },
            end: AstPoint { 8:28 },
        },
    },
]
