crates/variables/src/snapshots/variables__tests__in_lambda.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 2,
        jtype: Generic(
            "Uni",
            [
                Class(
                    "Response",
                ),
            ],
        ),
        name: "test",
        is_fun: true,
        range: AstRange {
            start: AstPoint { 2:4 },
            end: AstPoint { 7:5 },
        },
    },
    LocalVariable {
        level: 3,
        jtype: Var,
        name: "t",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 3:29 },
            end: AstPoint { 3:30 },
        },
    },
    LocalVariable {
        level: 4,
        jtype: Class(
            "Definition",
        ),
        name: "q",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 4:20 },
            end: AstPoint { 4:51 },
        },
    },
]
