crates/variables/src/snapshots/variables__tests__this_context_array.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 1,
        jtype: Array(
            Class(
                "String",
            ),
        ),
        name: "hello",
        range: AstRange {
            start: AstPoint { 5:4 },
            end: AstPoint { 5:18 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
    LocalVariable {
        level: 1,
        jtype: Array(
            Class(
                "String",
            ),
        ),
        name: "se",
        range: AstRange {
            start: AstPoint { 6:4 },
            end: AstPoint { 6:15 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
    LocalVariable {
        level: 1,
        jtype: Array(
            Class(
                "String",
            ),
        ),
        name: "other",
        range: AstRange {
            start: AstPoint { 8:4 },
            end: AstPoint { 8:30 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
    LocalVariable {
        level: 2,
        jtype: Void,
        name: "hello",
        range: AstRange {
            start: AstPoint { 10:4 },
            end: AstPoint { 15:5 },
        },
        flags: VarFlags(
            Function,
        ),
    },
    LocalVariable {
        level: 2,
        jtype: Array(
            Class(
                "String",
            ),
        ),
        name: "a",
        range: AstRange {
            start: AstPoint { 10:22 },
            end: AstPoint { 10:32 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
    LocalVariable {
        level: 3,
        jtype: Array(
            Class(
                "String",
            ),
        ),
        name: "local",
        range: AstRange {
            start: AstPoint { 11:8 },
            end: AstPoint { 11:26 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
    LocalVariable {
        level: 3,
        jtype: Var,
        name: "lo",
        range: AstRange {
            start: AstPoint { 13:8 },
            end: AstPoint { 13:17 },
        },
        flags: VarFlags(
            0x0,
        ),
    },
]
