crates/variables/src/snapshots/variables__tests__this_context_base.snap
---
source: crates/variables/src/lib.rs
expression: out
---
[
    LocalVariable {
        level: 1,
        jtype: Class(
            "String",
        ),
        name: "hello",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 5:4 },
            end: AstPoint { 5:16 },
        },
    },
    LocalVariable {
        level: 1,
        jtype: Class(
            "String",
        ),
        name: "se",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 6:4 },
            end: AstPoint { 6:13 },
        },
    },
    LocalVariable {
        level: 1,
        jtype: Class(
            "String",
        ),
        name: "other",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 8:4 },
            end: AstPoint { 8:28 },
        },
    },
    LocalVariable {
        level: 2,
        jtype: Void,
        name: "hello",
        is_fun: true,
        range: AstRange {
            start: AstPoint { 10:4 },
            end: AstPoint { 15:5 },
        },
    },
    LocalVariable {
        level: 2,
        jtype: Class(
            "String",
        ),
        name: "a",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 10:22 },
            end: AstPoint { 10:30 },
        },
    },
    LocalVariable {
        level: 3,
        jtype: Class(
            "String",
        ),
        name: "local",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 11:8 },
            end: AstPoint { 11:24 },
        },
    },
    LocalVariable {
        level: 3,
        jtype: Class(
            "java.lang.Integer",
        ),
        name: "lo",
        is_fun: false,
        range: AstRange {
            start: AstPoint { 13:8 },
            end: AstPoint { 13:19 },
        },
    },
]
